Further UI work - navigate arrws in place, currently some trouble with horizontal overflow in questions. checkbox answers altered to responsive - could be causing other UI issues

--- a/css/flow/flow.css
+++ b/css/flow/flow.css
@@ -6,11 +6,6 @@
 	overflow: hidden;
 }
 
-/* overriding Bootstrap navbar style to better conserve space */
-.navbar {
-	margin-bottom: 0;
-}
-
 #ccij_outcomes {
 	display: none;
 }
