--- a/css/flow/themes/h-slides/theme.css
+++ b/css/flow/themes/h-slides/theme.css
@@ -8,23 +8,33 @@
 
 .flow-carousel-navigation {
 	visibility: hidden;
-	position: relative;
-	top: 20px;
-	z-index: 1;
+	position: absolute;
+	z-index: 2;
+	padding-top: 140px;
+	padding-bottom: 140px;
+	background-color: #c5c5c5;
+	width: 25px;
+	text-align: center;
+}
+
+.flow-carousel-navigation:hover {
+	background-color: #d0d0d0;
 }
 
 #flow_carousel_navigation_back {
 	float: left;
+	left: 0;
 }
 
 #flow_carousel_navigation_forward {
 	float: right;
+	right: 0;
 }
 
 .question-container-background {
 	height: 300px;
 	width: 100%;
-	background-color: #dddddd;
+	background-color: #f3f3f3;
 }
 
 /* overriding default Bootstrap Carousel styles so that questions are always shown within question background (above) */
@@ -32,10 +42,9 @@
 	top: 0; 
 	height: 300px;
 	overflow: auto;
-	width: 100%;
-	right: 0;
-	left: 0;
-	padding: 0 20px 0 20px;
+	right: 30px;
+	left: 30px;
+	z-index: 1;
 }
 
 #flow_outcomes {
@@ -52,7 +61,7 @@
 }
 
 .answers {
-	padding: 20px 0 0 10px;
+	padding: 20px 0 0 0;
 	text-align: left;
 	color: black;
 }
